# VOD

./: .gitignore  CMakeLists.txt  Source.cpp  Untitled15.ipynb  conanfile.txt  lib.h  main.cpp  optim.cpp  qriwjgqjitfqwjgw.sln  src.cpp
